--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-.dub
-docs.json
-__dummy.html
-__test__library__
-tdiff3
+/.dub
+/docs.json
+/docs/
+/__dummy.html
+/__test__library__
+/tdiff3
 *.o
 *.obj
+*.lst
