--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
+/_deps
 /.dub
 /docs.json
 /docs/
+/lib
 /__dummy.html
 /__test__library__
-/tdiff3
 /tdiff3.log
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+Makefile
 *.o
 *.obj
 *.lst
