--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.1...3.26)
 project(
   tdiff3
   VERSION 0.1
-  LANGUAGES CXX)
+  LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED On)
@@ -11,5 +11,6 @@ set(CMAKE_CXX_EXTENSIONS Off)
 
 
 add_subdirectory(src)
+add_subdirectory(gnudiff)
 add_subdirectory(test)
 
